# UbahIn

./: .gitignore  CHANGELOG.md  README.md  build_debug.bat  build_installer.bat  build_portable.bat  build_release_assets.bat  build_release_windows.bat  diagnose_ubahin.bat  installer_script.iss  main.py  pyproject.toml  requirements.txt  run_dev.bat  run_tests.bat  test_installer_windows.bat
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-windows.yml  ci.yml  release-windows.yml
design/reference/: Ubahin.html
desktop-tauri/: index.html  package-lock.json  package.json
desktop-tauri/src/: App.tsx  main.tsx  styles.css
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: app_log.rs  commands.rs  main.rs  sidecar.rs
desktop-tauri/src/hooks/: useAppSettings.ts  useHeicConversionJob.ts  useImageConversionJob.ts  useImageToPdfJob.ts  usePdfToJpgJob.ts  useTauriEvent.ts  useTheme.ts  useToasts.ts
desktop-tauri/src/pages/: ComingSoonPage.tsx  EngineCheckPage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx  pages.css
desktop-tauri/src/services/: engine.ts  heicConversion.ts  history.ts  imageConversion.ts  imageToPdf.ts  pdfToJpg.ts  settings.ts  transport.ts
desktop-tauri/src/styles/: globals.css  responsive.css  tokens.css
docs/: RELEASE_NOTES_TEMPLATE.md  TAURI_MIGRATION.md
engine-python/: build_engine.bat  engine_main.py  requirements.txt
legacy/pywebview-or-tkinter-ui-backup/: README.md
native/: Cargo.toml
native/ubahin_native/: Cargo.toml
native/ubahin_native/src/: lib.rs
scripts/: benchmark_smoke.py  bump_version.py
src/ubahin/: __init__.py  cli.py  converter.py  events.py  history.py  manager.py  models.py  native_bridge.py  registry.py  settings.py
src/ubahin/core/: __init__.py  (+8 more)
tests/: conftest.py  test_atomic_output.py  test_compress_pdf.py  test_conversion.py  test_desktop_bridge.py  test_desktop_self_check.py  test_desktop_ui_threading.py  test_desktop_window_manager.py  test_engine_inspect_image_conversion.py  test_engine_shutdown_protocol.py  test_heic_conversion.py  test_history.py  test_history_protocol.py  test_image_conversion.py  test_image_to_pdf.py  test_image_tools.py  test_job_lifecycle.py  test_merge_pdf.py  test_native_bridge.py  test_pdf_to_jpg.py  test_resource_governor.py  test_settings.py  test_settings_protocol.py  test_split_pdf.py  test_validation.py
(+79 files in other folders)
