[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ubahin"
version = "0.1.0"
description = "Mesin konversi file lokal untuk aplikasi Ubahin"
requires-python = ">=3.11"
dependencies = [
  "PyMuPDF>=1.26,<2.0",
  "Pillow>=10.0",
  "psutil>=5.9",
]

[project.scripts]
ubahin = "ubahin.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
