[package]
name = "ubahin_desktop"
version = "0.1.1"
description = "Ubahin desktop shell"
authors = ["Catalism-1"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["time"] }
